<resources>
    <string name="app_name">Lab04</string>
    <string name="hello_tjhsst">Hello TJHSST!</string>
    <string name="hello">Hello</string>
    <string name="hello_dad">Hello Dad</string>
    <string name="hello_mom">Hello Mom</string>
    <string name="hello_brother">Hello Brother</string>
    <string name="hello_everybody">Hello Everybody</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="view1">view1</string>
    <string name="this_is_a_view">This is a view</string>
    <string name="another_view">Another view</string>
    <string name="this_is_long_text">this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \n this is long text \nthis is long text \n</string>
    <string name="this_is_a_checkbox">This is a checkbox</string>
    <string name="move_to_next_layout">Move to next layout</string>
</resources>